# routes/api.php
@@ -6,12 +6,13 @@ use App\Http\Controllers\BookingController;
 use App\Http\Controllers\EventController;
 use Illuminate\Support\Facades\Route;
 
-//Route::middleware('auth:sanctum')->group(function () {
+Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('events', EventController::class)->except(['index', 'show']);
-//});
+});
 
 // Public routes
 Route::get('events', [EventController::class, 'index']);
 Route::get('events/{event}', [EventController::class, 'show']);
 Route::apiResource('attendees', AttendeeController::class);
+Route::get('bookings', [BookingController::class, 'index']);
 Route::post('bookings', [BookingController::class, 'store']);
